; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/string/extr_stdstring.c_string_trim_whitespace_left.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/string/extr_stdstring.c_string_trim_whitespace_left.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @string_trim_whitespace_left(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %7, label %44

7:                                                ; preds = %1
  %8 = load i8*, i8** %2, align 8
  %9 = load i8, i8* %8, align 1
  %10 = sext i8 %9 to i32
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %44

12:                                               ; preds = %7
  %13 = load i8*, i8** %2, align 8
  %14 = call i64 @strlen(i8* %13)
  store i64 %14, i64* %3, align 8
  %15 = load i8*, i8** %2, align 8
  store i8* %15, i8** %4, align 8
  br label %16

16:                                               ; preds = %28, %12
  %17 = load i8*, i8** %4, align 8
  %18 = load i8, i8* %17, align 1
  %19 = sext i8 %18 to i32
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %26

21:                                               ; preds = %16
  %22 = load i8*, i8** %4, align 8
  %23 = load i8, i8* %22, align 1
  %24 = call i64 @isspace(i8 zeroext %23)
  %25 = icmp ne i64 %24, 0
  br label %26

26:                                               ; preds = %21, %16
  %27 = phi i1 [ false, %16 ], [ %25, %21 ]
  br i1 %27, label %28, label %33

28:                                               ; preds = %26
  %29 = load i8*, i8** %4, align 8
  %30 = getelementptr inbounds i8, i8* %29, i32 1
  store i8* %30, i8** %4, align 8
  %31 = load i64, i64* %3, align 8
  %32 = add i64 %31, -1
  store i64 %32, i64* %3, align 8
  br label %16

33:                                               ; preds = %26
  %34 = load i8*, i8** %2, align 8
  %35 = load i8*, i8** %4, align 8
  %36 = icmp ne i8* %34, %35
  br i1 %36, label %37, label %43

37:                                               ; preds = %33
  %38 = load i8*, i8** %2, align 8
  %39 = load i8*, i8** %4, align 8
  %40 = load i64, i64* %3, align 8
  %41 = add i64 %40, 1
  %42 = call i32 @memmove(i8* %38, i8* %39, i64 %41)
  br label %43

43:                                               ; preds = %37, %33
  br label %44

44:                                               ; preds = %43, %7, %1
  %45 = load i8*, i8** %2, align 8
  ret i8* %45
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i64 @isspace(i8 zeroext) #1

declare dso_local i32 @memmove(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
